visual fix on mobile

--- a/Santa's-Sweatshop/santa.css
+++ b/Santa's-Sweatshop/santa.css
@@ -92,6 +92,7 @@ a {
 }
 
 #image-container {
+  gap: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
